--- a/style.css
+++ b/style.css
@@ -14,18 +14,22 @@ html,body{
 .bold{
     font-weight: bold;
 }
+.borderRight{
+    padding: 5px;
+    border-right: 2px black solid;
+    margin: 5px;
+}
 
 .m-2 {
     margin: 10px;
 }
 .container{
     width: 948px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 30px;
+
 }
 .rougetitle{
     font-size: 15px;
@@ -82,10 +86,12 @@ html,body{
 }
 .logohm{
     margin-bottom: 2vh;
+    width: 50px;
+    height: 35px;
 }
 .logoReseaux{
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     margin: 20px;
 }
 .information{
@@ -145,6 +151,7 @@ html,body{
 
 
 }
+
 .bouttonNB2{
     color: white;
     background-color: #212121;
@@ -180,7 +187,7 @@ html,body{
     margin-right: 5px;
 
     font-weight: bold;
-    background-color: #F1EBDF;
+
     border: black 1px solid;
 }
 .font-xxl{
@@ -441,7 +448,7 @@ align-items: center;}
     justify-content: center;
     align-items: center;
     padding-bottom: 50px;
-    margin-bottom: 7vh;
+    margin-bottom: 30px;
 
 }
 .magazinePHotos{
@@ -477,11 +484,13 @@ align-items: center;}
     background-color: #E4E4E4;
     width: 100vw;
     height: 80vh;
-    padding-top: 50px;
+    padding-top: 30px;
+    padding-bottom: 50px;
 }
 .grille{
+
     width: 980px;
-    height: 250px;
+    height: 340px;
     display: grid;
     grid-template-columns: 3fr 3fr 3fr 3fr ;
 }
